--- a/README
+++ b/README
@@ -1,8 +1,7 @@
-<? read_starfish_conf(); echo &readme_line(); !>
-#+
 Calendar::Schedule version 1.08
 ===============================
-#-
+Note: The above lines are generated based on the following code:
+<? read_starfish_conf(); &set_readme_line1; !>
 
 This is a Perl module for handling calendar schedules.  Documentation
 is a part of Schedule.pm in the pod format.  To convert it into manual
